# CursedSnake

./: CMakeLists.txt  Consts.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  README.md  Utils.cpp  Utils.h  main.cpp
CursesWrapper/: Rect.cpp  Rect.h  Util.cpp  Util.h  Vector2.cpp  Vector2.h
PixelMaps/: Gameover.txt
